--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -15,7 +15,7 @@ object Form1: TForm1
     Size.Width = 1021.000000000000000000
     Size.Height = 697.000000000000000000
     Size.PlatformDefault = False
-    TabIndex = 2
+    TabIndex = 0
     TabOrder = 3
     TabPosition = PlatformDefault
     OnChange = TabControl1Change
@@ -30,7 +30,7 @@ object Form1: TForm1
       CustomIcon = <
         item
         end>
-      IsSelected = False
+      IsSelected = True
       Size.Width = 66.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
@@ -162,7 +162,7 @@ object Form1: TForm1
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 79.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
@@ -229,7 +229,6 @@ object Form1: TForm1
         Position.Y = 104.000000000000000000
       end
       object CheckBox1: TCheckBox
-        IsChecked = True
         Position.X = 336.000000000000000000
         Position.Y = 38.000000000000000000
         TabOrder = 6
@@ -241,9 +240,10 @@ object Form1: TForm1
         Cursor = crIBeam
         Min = 10.000000000000000000
         Max = 60.000000000000000000
-        Value = 10.000000000000000000
+        Value = 14.000000000000000000
         Position.X = 356.000000000000000000
         Position.Y = 80.000000000000000000
+        Enabled = False
         Size.Width = 100.000000000000000000
         Size.Height = 22.000000000000000000
         Size.PlatformDefault = False
@@ -378,13 +378,6 @@ object Form1: TForm1
       FieldName = 'STAY'
       Control = CheckBox1
       Track = True
-    end
-    object LinkControlToField3: TLinkControlToField
-      Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
-      DataSource = BindSourceDB3
-      FieldName = 'IMAGE'
-      Control = Image3
-      Track = False
     end
     object LinkControlToField4: TLinkControlToField
       Category = #12463#12452#12483#12463' '#12496#12452#12531#12487#12451#12531#12464
