--- a/Unit1.Surface.fmx
+++ b/Unit1.Surface.fmx
@@ -32,6 +32,7 @@ inherited Form1_Surface: TForm1_Surface
       ExplicitSize.cx = 68.000000000000000000
       ExplicitSize.cy = 26.000000000000000000
       inherited TrackBar1: TTrackBar
+        Max = 10.000000000000000000
         Position.Y = 1875.000000000000000000
         Size.Width = 1080.000000000000000000
       end
@@ -39,6 +40,10 @@ inherited Form1_Surface: TForm1_Surface
         Size.Width = 1080.000000000000000000
       end
       inherited Panel1: TPanel
+        Size.Width = 1080.000000000000000000
+        Size.Height = 1795.000000000000000000
+      end
+      inherited Image3: TImage
         Size.Width = 1080.000000000000000000
         Size.Height = 1795.000000000000000000
       end
