順調に動き始めた

--- a/Unit1.Surface.fmx
+++ b/Unit1.Surface.fmx
@@ -40,8 +40,12 @@ inherited Form1_Surface: TForm1_Surface
         Size.Width = 1080.000000000000000000
       end
       inherited Panel1: TPanel
+        Anchors = [akLeft, akTop, akBottom]
         Size.Width = 1080.000000000000000000
         Size.Height = 1795.000000000000000000
+        inherited Image2: TImage
+          Position.X = 59.000000000000000000
+        end
       end
       inherited Image3: TImage
         Size.Width = 1080.000000000000000000
