変更多数　ブランチの寸前

--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -666,7 +666,7 @@ object Form1: TForm1
           Anchors = [akTop, akRight]
           Enabled = True
           ImageIndex = -1
-          Position.X = 26878.000000000000000000
+          Position.X = 27592.000000000000000000
           Position.Y = 32.000000000000000000
         end
       end
@@ -823,7 +823,7 @@ object Form1: TForm1
         DataDetectorTypes = []
         Lines.Strings = (
           #12496#12540#12472#12519#12531
-          'ver 0.1'
+          'ver 1.0'
           ''
           ''
           #35613#36766
@@ -897,10 +897,10 @@ object Form1: TForm1
         Lines.Strings = (
           #21069#20316'PDFViewerDB'#12392#12398#20114#25563#24615#12399#12354#12426#12414#12379#12435
           ''
-          #12514#12496#12452#12523#12391#12398#12467#12531#12497#12452#12523#12420#26377#26009#29256#12391#12398'ibTOGO'#12418#35222#37326#12395#20837#12428#12383#35373#35336#12395#12394#12387#12390#12356#12414#12377#12290
-          #20182#31038#35069#21697#12395#22823#22793#20284#12383#20316#12426#12395#12394#12387#12390#12375#12414#12387#12390#34920#12395#20986#12375#12389#12425#12367#12394#12426#12414#12375#12383#12290
+          #20182#31038#35069#21697#12395#22823#22793#20284#12383#20316#12426#12395#12394#12387#12390#12375#12414#12387#12390
+          #34920#12395#20986#12375#12389#12425#12367#12394#12426#12414#12375#12383#12290
           ''
-          #12372#33258#36523#12391#12477#12540#12473#12467#12540#12489#12363#12425#23455#34892#12501#12449#12452#12523#12434#20316#12387#12390#27005#12375#12416#12371#12392#12434#20170#12398#12392#12371#12429#12399#24819#23450#12375#12390#12356#12414#12377#12290
+          'DELPHI 11 CE '#12391#20316#25104#12373#12428#12390#12356#12414#12377
           '')
         CanFocus = False
         Position.X = 128.000000000000000000
@@ -910,7 +910,7 @@ object Form1: TForm1
         Size.PlatformDefault = False
         TabOrder = 7
         Viewport.Width = 293.000000000000000000
-        Viewport.Height = 271.000000000000000000
+        Viewport.Height = 287.000000000000000000
       end
       object Button1: TButton
         Position.X = 134.000000000000000000
@@ -926,7 +926,7 @@ object Form1: TForm1
         Position.Y = 176.000000000000000000
         TabOrder = 9
         Text = #24038#12363#12425#12402#12425#12367
-        OnClick = RadioButton2Click
+        OnChange = RadioButton1Change
       end
       object RadioButton2: TRadioButton
         GroupName = 'selection'
@@ -934,7 +934,7 @@ object Form1: TForm1
         Position.Y = 224.000000000000000000
         TabOrder = 10
         Text = #21491#12363#12425#12402#12425#12367
-        OnClick = RadioButton2Click
+        OnChange = RadioButton1Change
       end
     end
   end
@@ -1035,7 +1035,7 @@ object Form1: TForm1
     end
     object Action9: TAction
       Category = 'navi'
-      Text = 'map'
+      Text = 'navi'
       OnExecute = Action9Execute
     end
     object Action10: TAction
