--- a/Unit5.fmx
+++ b/Unit5.fmx
@@ -2,12 +2,13 @@ object Form5: TForm5
   Left = 0
   Top = 0
   BorderStyle = ToolWindow
-  Caption = 'Form5'
+  Caption = #30011#20687#12434#36984#12435#12391#12367#12384#12373#12356
   ClientHeight = 480
   ClientWidth = 640
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   OnShow = FormShow
   DesignerMasterStyle = 0
   object Button1: TButton
@@ -49,9 +50,9 @@ object Form5: TForm5
   end
   object ListBox1: TListBox
     Position.X = 56.000000000000000000
-    Position.Y = 32.000000000000000000
+    Position.Y = 64.000000000000000000
     Size.Width = 273.000000000000000000
-    Size.Height = 417.000000000000000000
+    Size.Height = 385.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 5
     OnDragOver = ListBox1DragOver
@@ -60,8 +61,20 @@ object Form5: TForm5
     DefaultItemStyles.ItemStyle = ''
     DefaultItemStyles.GroupHeaderStyle = ''
     DefaultItemStyles.GroupFooterStyle = ''
+    OnChange = ListBox1Change
     Viewport.Width = 269.000000000000000000
-    Viewport.Height = 413.000000000000000000
+    Viewport.Height = 381.000000000000000000
+    object Label2: TLabel
+      AutoSize = True
+      AutoTranslate = False
+      Position.X = -24.000000000000000000
+      Position.Y = -40.000000000000000000
+      Size.Width = 120.000000000000000000
+      Size.Height = 16.000000000000000000
+      Size.PlatformDefault = False
+      Text = 'Label2'
+      TabOrder = 0
+    end
   end
   object Label1: TLabel
     Position.X = 376.000000000000000000
