DELPHI CE でもIBLiteは使用可能だそうですから挑戦してみます

--- a/Unit5.fmx
+++ b/Unit5.fmx
@@ -2,21 +2,23 @@ object Form5: TForm5
   Left = 0
   Top = 0
   BorderStyle = ToolWindow
-  Caption = 'Form5'
+  Caption = #30011#20687#12434#36984#25246#12375#12390#12367#12384#12373#12356
   ClientHeight = 480
   ClientWidth = 640
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   OnShow = FormShow
   DesignerMasterStyle = 0
   object Button1: TButton
+    Default = True
     Enabled = False
     ModalResult = 1
     Position.X = 528.000000000000000000
     Position.Y = 80.000000000000000000
     TabOrder = 0
-    Text = 'Button1'
+    Text = 'OK'
   end
   object Button2: TButton
     Cancel = True
@@ -24,7 +26,7 @@ object Form5: TForm5
     Position.X = 528.000000000000000000
     Position.Y = 136.000000000000000000
     TabOrder = 1
-    Text = 'Button2'
+    Text = 'Cancel'
   end
   object Edit1: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
@@ -49,9 +51,9 @@ object Form5: TForm5
   end
   object ListBox1: TListBox
     Position.X = 56.000000000000000000
-    Position.Y = 32.000000000000000000
+    Position.Y = 64.000000000000000000
     Size.Width = 273.000000000000000000
-    Size.Height = 417.000000000000000000
+    Size.Height = 385.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 5
     OnDragOver = ListBox1DragOver
@@ -61,7 +63,7 @@ object Form5: TForm5
     DefaultItemStyles.GroupHeaderStyle = ''
     DefaultItemStyles.GroupFooterStyle = ''
     Viewport.Width = 269.000000000000000000
-    Viewport.Height = 413.000000000000000000
+    Viewport.Height = 381.000000000000000000
   end
   object Label1: TLabel
     Position.X = 376.000000000000000000
@@ -87,5 +89,15 @@ object Form5: TForm5
     Position.Y = 396.000000000000000000
     Text = 'Delete'
     OnClick = SpeedButton2Click
+  end
+  object Label2: TLabel
+    AutoSize = True
+    Position.X = 48.000000000000000000
+    Position.Y = 24.000000000000000000
+    Size.Width = 120.000000000000000000
+    Size.Height = 16.000000000000000000
+    Size.PlatformDefault = False
+    Text = 'Label2'
+    TabOrder = 11
   end
 end
