--- a/Unit5.fmx
+++ b/Unit5.fmx
@@ -12,12 +12,13 @@ object Form5: TForm5
   OnShow = FormShow
   DesignerMasterStyle = 0
   object Button1: TButton
+    Default = True
     Enabled = False
     ModalResult = 1
     Position.X = 528.000000000000000000
     Position.Y = 80.000000000000000000
     TabOrder = 0
-    Text = 'Button1'
+    Text = 'OK'
   end
   object Button2: TButton
     Cancel = True
@@ -25,7 +26,7 @@ object Form5: TForm5
     Position.X = 528.000000000000000000
     Position.Y = 136.000000000000000000
     TabOrder = 1
-    Text = 'Button2'
+    Text = 'Cancel'
   end
   object Edit1: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
