こちらのブランチも多種類のピクチャソースに対応 IBLiteがどこまで動作してくれるのか心配

--- a/Unit1.fmx
+++ b/Unit1.fmx
@@ -666,7 +666,7 @@ object Form1: TForm1
           Anchors = [akTop, akRight]
           Enabled = True
           ImageIndex = -1
-          Position.X = 31876.000000000000000000
+          Position.X = 33304.000000000000000000
           Position.Y = 32.000000000000000000
         end
       end
@@ -901,9 +901,11 @@ object Form1: TForm1
           #34920#12395#20986#12375#12389#12425#12367#12394#12426#12414#12375#12383#12290
           ''
           'DELPHI 11 CE '#12391#20316#25104#12373#12428#12390#12356#12414#12377
-          '')
+          ''
+          #12487#12540#12479#12505#12540#12473#12395#12399'IBLite'#12434#20351#29992#12375#12390#12356#12414#12377#12290
+          #12501#12449#12452#12523#12399#65297#65296#65296'MB'#12414#12391#12290)
         CanFocus = False
-        Position.X = 128.000000000000000000
+        Position.X = 121.000000000000000000
         Position.Y = 278.000000000000000000
         Size.Width = 297.000000000000000000
         Size.Height = 291.000000000000000000
